<resources>
    <string name="app_name">Petbook</string>
    <string name="pname">Nombre</string>
    <string name="pmaster">Dueño</string>
    <string name="pphone">Teléfono</string>
    <string name="page">(5 años)</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_contact">"Contacto</string>
    <string name="menu_about">"Acerca de</string>
    <string name="send_comment">Enviar comentario</string>
    <string name="contact_title">Contacto</string>
    <string name="name_hint">Nombre</string>
    <string name="email_hint">Dirección de correo</string>
    <string name="comment_hint">Mensaje</string>
    <string name="subject_hint">Asunto</string>

    <string name="tvAboutActivity">Esta app fue desarrollada con la intención de aprender respecto al desarrolo de apps en Android. En ella son implemtados algunos de
    los conceptos más importantes para la elaboración de una app, que sea consistente y funcional. Si tiene alguna inquietud, favor ponerse en contacto con Víctor Moreno Marín
    a través del email</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
